--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,6 +6,11 @@
         <a class="nav-link" href="{{ url_for('dashboard') }}">Home</a>
     </li>
     {% if not blocked %}
+    {% if current_user.role == 'customer' %}
+    <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('services') }}">Services</a>
+    </li>
+    {% endif %}
     <li class="nav-item">
         <a class="nav-link" href="{{ url_for('search') }}">Search</a>
     </li>
